testcases/error-cases/syntax-error-01/error.txt
error[E0001]: expected expression after '='
 --> testcases\error-cases\syntax-error-01\input.canon:4:1
  |
2 |     name = "test"
3 |     version = // missing value - syntax error
4 | }
  | ^ expected an expression here
5 | 
  |
  = note: assignment expressions require a value on the right side
  = help: try providing a value like: some_variable = "some_value"
